--- a/jupyter_english/assignments_demo/assignment04_sarcasm_detection_with_logit.ipynb
+++ b/jupyter_english/assignments_demo/assignment04_sarcasm_detection_with_logit.ipynb
@@ -34,18 +34,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "_uuid": "23a833b42b3c214b5191dfdc2482f2f901118247"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ls: невозможно получить доступ к '../input/sarcasm/': Нет такого файла или каталога\n"
+     ]
+    }
+   ],
    "source": [
     "!ls ../input/sarcasm/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/danofer/sarcasm?dataset_version_number=4...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 216M/216M [01:06<00:00, 3.43MB/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path to dataset files: /home/gladiator1488/.cache/kagglehub/datasets/danofer/sarcasm/versions/4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import kagglehub\n",
+    "\n",
+    "# Download latest version\n",
+    "path = kagglehub.dataset_download(\"danofer/sarcasm\")\n",
+    "\n",
+    "print(\"Path to dataset files:\", path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "_uuid": "ffa03aec57ab6150f9bec0fa56cd3a5791a3e6f4"
    },
@@ -67,33 +125,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "_uuid": "b23e4fc7a1973d60e0c6da8bd60f3d921542a856"
    },
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv(\"../input/sarcasm/train-balanced-sarcasm.csv\")"
+    "train_df = pd.read_csv(path + \"/train-balanced-sarcasm.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "_uuid": "4dc7b3787afa46c7eb0d0e33b0c41ab9821c4a27"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>comment</th>\n",
+       "      <th>author</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>score</th>\n",
+       "      <th>ups</th>\n",
+       "      <th>downs</th>\n",
+       "      <th>date</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>parent_comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NC and NH.</td>\n",
+       "      <td>Trumpbart</td>\n",
+       "      <td>politics</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2016-10</td>\n",
+       "      <td>2016-10-16 23:55:23</td>\n",
+       "      <td>Yeah, I get that argument. At this point, I'd ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>You do know west teams play against west teams...</td>\n",
+       "      <td>Shbshb906</td>\n",
+       "      <td>nba</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2016-11</td>\n",
+       "      <td>2016-11-01 00:24:10</td>\n",
+       "      <td>The blazers and Mavericks (The wests 5 and 6 s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>They were underdogs earlier today, but since G...</td>\n",
+       "      <td>Creepeth</td>\n",
+       "      <td>nfl</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-09</td>\n",
+       "      <td>2016-09-22 21:45:37</td>\n",
+       "      <td>They're favored to win.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>This meme isn't funny none of the \"new york ni...</td>\n",
+       "      <td>icebrotha</td>\n",
+       "      <td>BlackPeopleTwitter</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2016-10</td>\n",
+       "      <td>2016-10-18 21:03:47</td>\n",
+       "      <td>deadass don't kill my buzz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>I could use one of those tools.</td>\n",
+       "      <td>cush2push</td>\n",
+       "      <td>MaddenUltimateTeam</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2016-12</td>\n",
+       "      <td>2016-12-30 17:00:13</td>\n",
+       "      <td>Yep can confirm I saw the tool they use for th...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label                                            comment     author  \\\n",
+       "0      0                                         NC and NH.  Trumpbart   \n",
+       "1      0  You do know west teams play against west teams...  Shbshb906   \n",
+       "2      0  They were underdogs earlier today, but since G...   Creepeth   \n",
+       "3      0  This meme isn't funny none of the \"new york ni...  icebrotha   \n",
+       "4      0                    I could use one of those tools.  cush2push   \n",
+       "\n",
+       "            subreddit  score  ups  downs     date          created_utc  \\\n",
+       "0            politics      2   -1     -1  2016-10  2016-10-16 23:55:23   \n",
+       "1                 nba     -4   -1     -1  2016-11  2016-11-01 00:24:10   \n",
+       "2                 nfl      3    3      0  2016-09  2016-09-22 21:45:37   \n",
+       "3  BlackPeopleTwitter     -8   -1     -1  2016-10  2016-10-18 21:03:47   \n",
+       "4  MaddenUltimateTeam      6   -1     -1  2016-12  2016-12-30 17:00:13   \n",
+       "\n",
+       "                                      parent_comment  \n",
+       "0  Yeah, I get that argument. At this point, I'd ...  \n",
+       "1  The blazers and Mavericks (The wests 5 and 6 s...  \n",
+       "2                            They're favored to win.  \n",
+       "3                         deadass don't kill my buzz  \n",
+       "4  Yep can confirm I saw the tool they use for th...  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "_uuid": "0a7ed9557943806c6813ad59c3d5ebdb403ffd78"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1010826 entries, 0 to 1010825\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column          Non-Null Count    Dtype \n",
+      "---  ------          --------------    ----- \n",
+      " 0   label           1010826 non-null  int64 \n",
+      " 1   comment         1010771 non-null  object\n",
+      " 2   author          1010826 non-null  object\n",
+      " 3   subreddit       1010826 non-null  object\n",
+      " 4   score           1010826 non-null  int64 \n",
+      " 5   ups             1010826 non-null  int64 \n",
+      " 6   downs           1010826 non-null  int64 \n",
+      " 7   date            1010826 non-null  object\n",
+      " 8   created_utc     1010826 non-null  object\n",
+      " 9   parent_comment  1010826 non-null  object\n",
+      "dtypes: int64(4), object(6)\n",
+      "memory usage: 77.1+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "train_df.info()"
    ]
@@ -109,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "_uuid": "97b2d85627fcde52a506dbdd55d4d6e4c87d3f08"
    },
@@ -129,11 +342,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "_uuid": "addd77c640423d30fd146c8d3a012d3c14481e11"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label\n",
+       "0    505403\n",
+       "1    505368\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_df[\"label\"].value_counts()"
    ]
@@ -149,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "_uuid": "c200add4e1dcbaa75164bbcc73b9c12ecb863c96"
    },
@@ -178,11 +405,18 @@
     "  - [Kaggle Kernel](https://www.kaggle.com/abhishek/approaching-almost-any-nlp-problem-on-kaggle) \"Approaching (Almost) Any NLP Problem on Kaggle\"\n",
     "  - [ELI5](https://github.com/TeamHG-Memex/eli5) to explain model predictions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
